@@ -1,3 +1,9 @@
+2010-03-03  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* EvaluationTests.cs:
+	* MdbEvaluationTests.cs: Fix tests. Formatting rules have
+	  changed.
+
 2010-03-02  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* DebugTests.cs:
